# torch-grammar

./: .gitignore  README.md  Untitled.ipynb  dev.yml  grammar_parser.py  grammar_sampler.py  pyproject.toml
.github/workflows/: ci.yml
examples/: grammar.ebnf
scripts/: demo  dissect.rb  style
tests/: test_grammar_sampler.py
torch_grammar/: __init__.py  ebnf.lark  grammar_parser.py  grammar_sampler.py  parser.py  token_trie.py
