[tool.poetry]
name = "torch-grammar"
version = "0.3.1"
description = "Restrict LLM generations to a context-free grammar"
authors = ["Burke Libbey <burke.libbey@shopify.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "torch_grammar"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.0.0"
transformers = "^4.29"
sentencepiece = "^0.1.99"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.272"
black = "^23.3.0"
pytest = "^7.3.2"
fire = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
